# shouldigetaheatpump

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  readme.md  shouldigetaheatpump.wpr
.github/workflows/: tests.yml
data/: camrose_data.csv
shouldigetaheatpump/: __init__.py  conversions.py  dash_app.py  get_data.py
shouldigetaheatpump/tests/: conftest.py  test_dash_app.py  test_dash_app_integration.py  test_get_data.py
