[tool.poetry]
name = "shouldigetaheatpump"
version = "0.1.0"
description = ""
authors = ["tomrutherford <tmrutherford@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
pendulum = "^3.0.0"
openmeteo-requests = "^1.2.0"
pandas = "^2.2.2"
requests-cache = "^1.2.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
