[project]
name = "shouldigetaheatpump"
version = "0.1.0"
description = ""
authors = [{ name = "tomrutherford", email = "tmrutherford@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pendulum>=3.0.0",
    "openmeteo-requests>=1.2.0",
    "pandas>=2.2.2",
    "requests-cache>=1.2.0",
    "loguru>=0.7.2",
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.6.0",
    "dash-leaflet>=0.1.23",
    "statsmodels>=0.14.2",
    "pint>=0.23",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.7.4",
    "dash[testing]>=2.17.0",
    "selenium>=4.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires chromedriver)",
    "slow: marks tests as slow running tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
